--- a/templates/initial_guesser.hpp.in
+++ b/templates/initial_guesser.hpp.in
@@ -27,6 +27,7 @@
 #include "@ModelName@_high_scale_constraint.hpp"
 #include "two_scale_initial_guesser.hpp"
 #include "error.hpp"
+#include "lowe.h"
 
 #include <sstream>
 
@@ -58,6 +59,7 @@ public:
 
    @ModelName@_initial_guesser(@ModelName@*,
                                const @ModelName@_input_parameters&,
+                               const QedQcd&,
                                const @ModelName@_low_scale_constraint&,
                                const @ModelName@_susy_scale_constraint&,
                                const @ModelName@_high_scale_constraint&);
@@ -67,6 +69,7 @@ public:
 private:
    @ModelName@* model;
    @ModelName@_input_parameters input_pars;
+   QedQcd oneset;
    @ModelName@_low_scale_constraint low_constraint;
    @ModelName@_susy_scale_constraint susy_constraint;
    @ModelName@_high_scale_constraint high_constraint;
