--- a/templates/initial_guesser.cpp.in
+++ b/templates/initial_guesser.cpp.in
@@ -67,11 +67,12 @@ void @ModelName@_initial_guesser::guess()
 
 void @ModelName@_initial_guesser::guess_susy_parameters()
 {
-   QedQcd leAtMt;
+   QedQcd leAtMt(oneset);
+   // @todo read MZ from oneset, because it is a SLHA2 input parameter
    const double MZ = Electroweak_constants::MZ;
    const double MW = Electroweak_constants::MW;
    const double sinThetaW2 = 1.0 - Sqr(MW / MZ);
-   const double mtpole = Electroweak_constants::PMTOP;
+   const double mtpole = leAtMt.displayPoleMt();
 
    // guess gauge couplings at mt
    const DoubleVector alpha_sm(leAtMt.getGaugeMu(mtpole, sinThetaW2));
@@ -88,15 +89,15 @@ void @ModelName@_initial_guesser::guess_susy_parameters()
    Eigen::Matrix<double,3,3> topDRbar(Eigen::Matrix<double,3,3>::Zero()),
       bottomDRbar(Eigen::Matrix<double,3,3>::Zero()),
       electronDRbar(Eigen::Matrix<double,3,3>::Zero());
-   topDRbar(0,0)      = Electroweak_constants::MUP;
-   topDRbar(1,1)      = Electroweak_constants::MCHARM;
+   topDRbar(0,0)      = leAtMt.displayMass(mUp);
+   topDRbar(1,1)      = leAtMt.displayMass(mCharm);
    topDRbar(2,2)      = leAtMt.displayMass(mTop) - 30.0;
-   bottomDRbar(0,0)   = Electroweak_constants::MDOWN;
-   bottomDRbar(1,1)   = Electroweak_constants::MSTRANGE;
-   bottomDRbar(2,2)   = Electroweak_constants::MBOTTOM;
-   electronDRbar(0,0) = Electroweak_constants::MELECTRON;
-   electronDRbar(1,1) = Electroweak_constants::MMUON;
-   electronDRbar(2,2) = Electroweak_constants::MTAU;
+   bottomDRbar(0,0)   = leAtMt.displayMass(mDown);
+   bottomDRbar(1,1)   = leAtMt.displayMass(mStrange);
+   bottomDRbar(2,2)   = leAtMt.displayMass(mBottom);
+   electronDRbar(0,0) = leAtMt.displayMass(mElectron);
+   electronDRbar(1,1) = leAtMt.displayMass(mMuon);
+   electronDRbar(2,2) = leAtMt.displayMass(mTau);
 
    Eigen::Matrix<double,3,3> new_Yu, new_Yd, new_Ye;
 
