read alpha_em and alpha_s from the low-energy input class

--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -147,6 +147,11 @@ void @ModelName@_low_scale_constraint::update_scale()
 
 void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
 {
+   assert(oneset.displayMu() == get_scale() && "Error: low-energy data"
+          " set is not defined at the same scale as the low-energy"
+          " constraint");
+
+   // @todo read MZ from oneset, because it is a SLHA2 input parameter
    const double MZ = Electroweak_constants::MZ;
    const double MW = Electroweak_constants::MW;
    const double MZ2 = Sqr(MZ);
@@ -156,6 +161,7 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
    const double self_energy_Z = Re(model->self_energy_@VectorZ@_heavy(MZ));
    const double self_energy_W = Re(model->self_energy_@VectorW@_heavy(MW));
    const double delta_sW2 = - cW2 * (self_energy_W / MW2 - self_energy_Z / MZ2);
+   // @todo read sinThetaW from oneset, because it is a SLHA2 input parameter
    double sinThetaW2_drbar = Sqr(SM(sinThetaW)) + delta_sW2;
 
    if (sinThetaW2_drbar <= 1.0e-4 || sinThetaW2_drbar >= 0.99) {
@@ -169,8 +175,8 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
    const double sinThetaW_drbar = Sqrt(sinThetaW2_drbar);
    const double cosThetaW_drbar = Sqrt(1.0 - sinThetaW2_drbar);
 
-   const double alpha_em = Sqr(SM(e) ) / (4. * Pi);
-   const double alpha_s  = Sqr(SM(g3)) / (4. * Pi);
+   const double alpha_em = oneset.displayAlpha(ALPHA);
+   const double alpha_s  = oneset.displayAlpha(ALPHAS);
 
    const double delta_alpha_em = calculate_delta_alpha_em(alpha_em);
    const double delta_alpha_s  = calculate_delta_alpha_s(alpha_s);
