--- a/templates/initial_guesser_low_scale_model.cpp.in
+++ b/templates/initial_guesser_low_scale_model.cpp.in
@@ -37,10 +37,12 @@ namespace flexiblesusy {
 @ModelName@_initial_guesser::@ModelName@_initial_guesser(
    @ModelName@* model_,
    const @ModelName@_input_parameters& input_pars_,
+   const QedQcd& oneset_,
    const @ModelName@_low_scale_constraint& low_constraint_
 )
    : Initial_guesser<Two_scale>()
    , model(model_)
+   , oneset(oneset_)
    , input_pars(input_pars_)
    , low_constraint(low_constraint_)
 {
@@ -61,11 +63,12 @@ void @ModelName@_initial_guesser::guess()
 
 void @ModelName@_initial_guesser::guess_susy_parameters()
 {
-   QedQcd leAtMt;
+   QedQcd leAtMt(oneset);
+   // @todo read MZ from oneset, because it is a SLHA2 input parameter
    const double MZ = Electroweak_constants::MZ;
    const double MW = Electroweak_constants::MW;
    const double sinThetaW2 = 1.0 - Sqr(MW / MZ);
-   const double mtpole = Electroweak_constants::PMTOP;
+   const double mtpole = leAtMt.displayPoleMt();
 
    // guess gauge couplings at mt
    const DoubleVector alpha_sm(leAtMt.getGaugeMu(mtpole, sinThetaW2));
@@ -82,15 +85,15 @@ void @ModelName@_initial_guesser::guess_susy_parameters()
    Eigen::Matrix<double,3,3> topDRbar(Eigen::Matrix<double,3,3>::Zero()),
       bottomDRbar(Eigen::Matrix<double,3,3>::Zero()),
       electronDRbar(Eigen::Matrix<double,3,3>::Zero());
-   topDRbar(0,0)      = Electroweak_constants::MUP;
-   topDRbar(1,1)      = Electroweak_constants::MCHARM;
+   topDRbar(0,0)      = leAtMt.displayMass(mUp);
+   topDRbar(1,1)      = leAtMt.displayMass(mCharm);
    topDRbar(2,2)      = leAtMt.displayMass(mTop) - 30.0;
-   bottomDRbar(0,0)   = Electroweak_constants::MDOWN;
-   bottomDRbar(1,1)   = Electroweak_constants::MSTRANGE;
-   bottomDRbar(2,2)   = Electroweak_constants::MBOTTOM;
-   electronDRbar(0,0) = Electroweak_constants::MELECTRON;
-   electronDRbar(1,1) = Electroweak_constants::MMUON;
-   electronDRbar(2,2) = Electroweak_constants::MTAU;
+   bottomDRbar(0,0)   = leAtMt.displayMass(mDown);
+   bottomDRbar(1,1)   = leAtMt.displayMass(mStrange);
+   bottomDRbar(2,2)   = leAtMt.displayMass(mBottom);
+   electronDRbar(0,0) = leAtMt.displayMass(mElectron);
+   electronDRbar(1,1) = leAtMt.displayMass(mMuon);
+   electronDRbar(2,2) = leAtMt.displayMass(mTau);
 
    Eigen::Matrix<double,3,3> new_Yu, new_Yd, new_Ye;
 
