--- a/templates/initial_guesser.cpp.in
+++ b/templates/initial_guesser.cpp.in
@@ -68,8 +68,7 @@ void @ModelName@_initial_guesser::guess()
 void @ModelName@_initial_guesser::guess_susy_parameters()
 {
    QedQcd leAtMt(oneset);
-   // @todo read MZ from oneset, because it is a SLHA2 input parameter
-   const double MZ = Electroweak_constants::MZ;
+   const double MZ = leAtMt.displayMzPole();
    const double MW = Electroweak_constants::MW;
    const double sinThetaW2 = 1.0 - Sqr(MW / MZ);
    const double mtpole = leAtMt.displayPoleMt();
