--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -132,6 +132,7 @@ void @ModelName@_low_scale_constraint::reset()
 {
    scale = initial_scale_guess;
    model = NULL;
+   oneset = QedQcd();
    new_g1 = 0.;
    new_g2 = 0.;
    new_g3 = 0.;
