--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -5,17 +5,17 @@ LIB@CLASSNAME@_SRC :=
 
 ifneq ($(findstring two_scale,$(ALGORITHMS)),)
 LIB@CLASSNAME@_SRC += \
-		$(DIR)/@CLASSNAME@_convergence_tester.cpp \
-		$(DIR)/@CLASSNAME@_high_scale_constraint.cpp \
-		$(DIR)/@CLASSNAME@_initial_guesser.cpp \
-		$(DIR)/@CLASSNAME@_low_scale_constraint.cpp \
-		$(DIR)/@CLASSNAME@_model.cpp \
-		$(DIR)/@CLASSNAME@_physical.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_convergence_tester.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_high_scale_constraint.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_model.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_physical.cpp \
 		$(DIR)/run_@CLASSNAME@.cpp \
-		$(DIR)/@CLASSNAME@_susy_parameters.cpp \
-		$(DIR)/@CLASSNAME@_soft_parameters.cpp \
-		$(DIR)/@CLASSNAME@_susy_scale_constraint.cpp \
-		$(DIR)/@CLASSNAME@_utilities.cpp
+		$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_utilities.cpp
 endif
 
 LIB@CLASSNAME@_OBJ := \
@@ -46,52 +46,52 @@ clean::         clean-$(MODNAME)
 
 distclean::     distclean-$(MODNAME)
 
-$(DIR)/@CLASSNAME@_susy_parameters.hpp: $(DIR)/start.m $(META_SRC) $(TEMPLATES)
+$(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp: $(DIR)/start.m $(META_SRC) $(TEMPLATES)
 	$(MATH) -run "Get[\"$<\"]; Quit[]"
 
-$(DIR)/@CLASSNAME@_susy_parameters.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_soft_parameters.hpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_soft_parameters.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_soft_parameters.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_physical.hpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_physical.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_physical.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_physical.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_model.hpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_model.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_model.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/run_@CLASSNAME@.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/run_@CLASSNAME@.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_convergence_tester.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_convergence_tester.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_initial_guesser.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_utilities.hpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_utilities.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
-$(DIR)/@CLASSNAME@_utilities.cpp: $(DIR)/@CLASSNAME@_susy_parameters.hpp
+$(DIR)/@CLASSNAME@_two_scale_utilities.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
 	true
 
 $(LIB@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(DIR)/run_@CLASSNAME@.o: CPPFLAGS += $(EIGENFLAGS)
