--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -18,8 +18,8 @@
 
 // File generated at @DateAndTime@
 
-#include "@ModelName@_high_scale_constraint.hpp"
-#include "@ModelName@_model.hpp"
+#include "@ModelName@_two_scale_high_scale_constraint.hpp"
+#include "@ModelName@_two_scale_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
 #include "ew_input.hpp"
