--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -21,8 +21,8 @@
 #ifndef @ModelName@_H
 #define @ModelName@_H
 
-#include "@ModelName@_soft_parameters.hpp"
-#include "@ModelName@_physical.hpp"
+#include "@ModelName@_two_scale_soft_parameters.hpp"
+#include "@ModelName@_two_scale_physical.hpp"
 #include "two_scale_model.hpp"
 
 #include <iosfwd>
