--- a/templates/two_scale_convergence_tester.cpp.in
+++ b/templates/two_scale_convergence_tester.cpp.in
@@ -18,7 +18,7 @@
 
 // File generated at @DateAndTime@
 
-#include "@ModelName@_convergence_tester.hpp"
+#include "@ModelName@_two_scale_convergence_tester.hpp"
 #include <cmath>
 #include <algorithm>
 #include <valarray>
