--- a/templates/two_scale_initial_guesser_low_scale_model.hpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.hpp.in
@@ -21,8 +21,8 @@
 #ifndef @ModelName@_INITIAL_GUESSER_H
 #define @ModelName@_INITIAL_GUESSER_H
 
-#include "@ModelName@_input_parameters.hpp"
-#include "@ModelName@_low_scale_constraint.hpp"
+#include "@ModelName@_two_scale_input_parameters.hpp"
+#include "@ModelName@_two_scale_low_scale_constraint.hpp"
 #include "two_scale_initial_guesser.hpp"
 #include "error.hpp"
 
