--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -21,7 +21,7 @@
 #ifndef @ModelName@_LOW_SCALE_CONSTRAINT_H
 #define @ModelName@_LOW_SCALE_CONSTRAINT_H
 
-#include "@ModelName@_input_parameters.hpp"
+#include "@ModelName@_two_scale_input_parameters.hpp"
 #include "two_scale_constraint.hpp"
 #include <Eigen/Core>
 
