--- a/templates/two_scale_soft_parameters.cpp.in
+++ b/templates/two_scale_soft_parameters.cpp.in
@@ -18,7 +18,7 @@
 
 // File generated at @DateAndTime@
 
-#include "@ModelName@_soft_parameters.hpp"
+#include "@ModelName@_two_scale_soft_parameters.hpp"
 #include "wrappers.hpp"
 
 #include <iostream>
