--- a/templates/two_scale_soft_parameters.hpp.in
+++ b/templates/two_scale_soft_parameters.hpp.in
@@ -22,7 +22,7 @@
 #define @ModelName@_soft_parameters_H
 
 #include "rge.h"
-#include "@ModelName@_susy_parameters.hpp"
+#include "@ModelName@_two_scale_susy_parameters.hpp"
 
 #include <iosfwd>
 
