--- a/templates/two_scale_input_parameters.hpp.in
+++ b/templates/two_scale_input_parameters.hpp.in
@@ -18,8 +18,8 @@
 
 // File generated at @DateAndTime@
 
-#ifndef @ModelName@_INPUT_PARAMETERS_H
-#define @ModelName@_INPUT_PARAMETERS_H
+#ifndef @ModelName@_TWO_SCALE_INPUT_PARAMETERS_H
+#define @ModelName@_TWO_SCALE_INPUT_PARAMETERS_H
 
 #include "mycomplex.h"
 
