--- a/templates/two_scale_convergence_tester.hpp.in
+++ b/templates/two_scale_convergence_tester.hpp.in
@@ -18,8 +18,8 @@
 
 // File generated at @DateAndTime@
 
-#ifndef @ModelName@_CONVERGENCE_TESTER_H
-#define @ModelName@_CONVERGENCE_TESTER_H
+#ifndef @ModelName@_TWO_SCALE_CONVERGENCE_TESTER_H
+#define @ModelName@_TWO_SCALE_CONVERGENCE_TESTER_H
 
 #include "@ModelName@_two_scale_model.hpp"
 #include "two_scale_convergence_tester_skeleton.hpp"
