--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -18,8 +18,8 @@
 
 // File generated at @DateAndTime@
 
-#ifndef @ModelName@_LOW_SCALE_CONSTRAINT_H
-#define @ModelName@_LOW_SCALE_CONSTRAINT_H
+#ifndef @ModelName@_TWO_SCALE_LOW_SCALE_CONSTRAINT_H
+#define @ModelName@_TWO_SCALE_LOW_SCALE_CONSTRAINT_H
 
 #include "@ModelName@_two_scale_input_parameters.hpp"
 #include "two_scale_constraint.hpp"
