--- a/templates/two_scale_physical.hpp.in
+++ b/templates/two_scale_physical.hpp.in
@@ -18,8 +18,8 @@
 
 // File generated at @DateAndTime@
 
-#ifndef @ModelName@_physical_H
-#define @ModelName@_physical_H
+#ifndef @ModelName@_TWO_SCALE_physical_H
+#define @ModelName@_TWO_SCALE_physical_H
 
 #include "linalg.h"
 
